   frequencies. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/deal-with-very-large-backups/#check-frequency
 * #536: Fix generate-borgmatic-config to support more complex schema changes like the new
   Healthchecks configuration options when the "--source" flag is used.
 * #538: Add support for "borgmatic borg debug" command.
 * Add Bash completion script so you can tab-complete the borgmatic command-line. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/set-up-backups/#shell-completion

1.6.1
 * #294: Add Healthchecks monitoring hook "ping_body_limit" option to configure how many bytes of
   logs to send to the Healthchecks server.
 * #402: Remove the error when "archive_name_format" is specified but a retention prefix isn't. 
 * #420: Warn when an unsupported variable is used in a hook command.
 * #439: Change connection failures for monitoring hooks (Healthchecks, Cronitor, PagerDuty, and
   Cronhub) to be warnings instead of errors. This way, the monitoring system failing does not block
   backups.
 * #460: Add Healthchecks monitoring hook "send_logs" option to enable/disable sending borgmatic
   logs to the Healthchecks server.
 * #525: Add Healthchecks monitoring hook "states" option to only enable pinging for particular
   monitoring states (start, finish, fail).
 * #528: Improve the error message when a configuration override contains an invalid value.
 * #531: BREAKING: When deep merging common configuration, merge colliding list values by appending
   them. Previously, one list replaced the other.
 * #532: When a configuration include is a relative path, load it from either the current working
   directory or from the directory containing the file doing the including. Previously, only the
   working directory was used.
 * Add a randomized delay to the sample systemd timer to spread out the load on a server.